# multimodal-agent

./: .gitignore  404.html  MAKEfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml  publish-test.yml  publish.yml
agent/: index.html
api/multimodal_agent/: index.html
architecture/: index.html
chunk_normalization/: index.html
cli/: index.html
config/: index.html
docs/: agent.md  architecture.md  chunk_normalization.md  cli.md  config.md  errors.md  examples.md  history.md  index.md  installation.md  json_mode.md  logging.md  memory.md  metadata_schema.md  quickstart.md  rag.md  server.md  sessions.md  token_usage.md  usage_logging.md
docs/api/: multimodal_agent.md
errors/: index.html
examples/: index.html  simple_image.py  simple_text.py
history/: index.html
installation/: index.html
json_mode/: index.html
logging/: index.html
memory/: index.html
metadata_schema/: index.html
quickstart/: index.html
rag/: index.html
search/: search_index.json
server/: index.html
sessions/: index.html
src/multimodal_agent/: __init__.py  agent_core.py  chunking.py  cli.py  embedding.py  formatting.py  logger.py  logging_config.py  rag_store.py  tokenizer.py  utils.py
src/multimodal_agent/tests/: conftest.py  test_agent_core.py  test_agent_core_chat.py  test_agent_core_retry.py  test_chunk_text.py  test_cli.py  test_cli_formatting.py  test_cli_history.py  test_cli_image_formatting.py  test_detect_language.py  test_embedding.py  test_formatting.py  test_json_mode.py  test_rag_store.py  test_tokenizer.py  test_usage.py  test_utiis_memory.py  test_utils.py  test_utils_history.py  test_utils_images.py
token_usage/: index.html
usage_logging/: index.html
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.js  extension.ts
vscode-extension/src/api/: serverClient.js  serverClient.ts
vscode-extension/src/commands/: fallback.ts  generateEnum.js  generateEnum.ts  generateModel.js  generateModel.ts  generateRepository.js  generateRepository.ts  generateScreen.js  generateScreen.ts  generateWidget.js  generateWidget.ts
vscode-extension/src/test/: extension.test.ts  index.ts  runTest.ts  utils.ts  workspace.test.ts
vscode-extension/src/test/suite/: activation.test.ts  generateEnum.offline.test.ts  generateEnum.test.ts  generateModel.offline.test.ts  generateModel.test.ts  generateRepository.offline.test.ts  generateScreen.offline.test.ts  generateScreen.test.ts  generateWidget.offline.test.ts  generateWidget.test.ts  genrateRepository.test.ts
vscode-extension/src/ui/: chatPanel.js  chatPanel.ts  chatWebview.js  chatWebview.ts
