[project]
name = "multimodal-agent"
version = "0.1.0"
description = "A Python multimodal agent for interacting with Gemini models via text, images, and CLI."
authors = [
    { name = "Horam", email = "horam.tech@google.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "google-genai>=1.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]

# OPTIONAL dependencies for development
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "mkdocs",
    "mkdocs-material",
]

[project.scripts]
agent = "multimodal_agent.cli:main"

[tool.flake8]
max-line-length = 100
exclude = ["build", "dist", ".venv"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["src/multimodal_agent/tests"]
addopts = "--cov=multimodal_agent --cov-report=term-missing"

[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"
