[project]
name = "multimodal-agent"
version = "0.1.0"
description = "A Python multimodal agent for interacting with Gemini models via text, images, and CLI."
authors = [
    { name = "Horam", email = "horam.tech@google.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Runtime dependencies
dependencies = [
    "google-genai>=1.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",       
]

[project.optional-dependencies]
# only testing dependencies
test = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1"
]

# development extras include testing + lint/format/docs
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "black>=24.0",
    "flake8>=7.0",
    "isort>=5.13",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
agent = "multimodal_agent.cli:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.flake8]
max-line-length = 100
exclude = ["build", "dist", ".venv"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["src/multimodal_agent/tests"]
addopts = "--cov=multimodal_agent --cov-report=term-missing"

[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"
